--- a/archives/toutiao-search/2024-02-08.md
+++ b/archives/toutiao-search/2024-02-08.md
@@ -1,59 +1,82 @@
 # 2024-02-08
 
-共 212 条
+共 228 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 08 2024 15:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Feb 08 2024 16:00:54 GMT+0800 (China Standard Time) -->
 1. [女子花129元理发回家崩溃大哭](https://so.toutiao.com/search?keyword=女子花129元理发回家崩溃大哭)
-1. [退伍军人晒政府发的工具箱慰问品](https://so.toutiao.com/search?keyword=退伍军人晒政府发的工具箱慰问品)
+1. [36岁女儿将水倒进油锅妈妈淡定清理](https://so.toutiao.com/search?keyword=36岁女儿将水倒进油锅妈妈淡定清理)
 1. [来点儿龙年年味](https://so.toutiao.com/search?keyword=来点儿龙年年味)
-1. [马布里评梅西：拿钱不出场太疯狂](https://so.toutiao.com/search?keyword=马布里评梅西：拿钱不出场太疯狂)
-1. [贵州80后女干部被逮捕](https://so.toutiao.com/search?keyword=贵州80后女干部被逮捕)
 1. [一家人刚扫完院里的雪 下一秒白干](https://so.toutiao.com/search?keyword=一家人刚扫完院里的雪+下一秒白干)
+1. [沪指3连阳迎兔年收官](https://so.toutiao.com/search?keyword=沪指3连阳迎兔年收官)
 1. [媒体人：以后梅西中国行都没有了](https://so.toutiao.com/search?keyword=媒体人：以后梅西中国行都没有了)
+1. [交警中队长查获干部酒驾后安排调包](https://so.toutiao.com/search?keyword=交警中队长查获干部酒驾后安排调包)
+1. [曝中国足协已暂停与阿根廷足协合作](https://so.toutiao.com/search?keyword=曝中国足协已暂停与阿根廷足协合作)
+1. [这张“湖北高速路况”图是AI制成的](https://so.toutiao.com/search?keyword=这张“湖北高速路况”图是AI制成的)
+1. [梅西在日本登场 港府要求解释](https://so.toutiao.com/search?keyword=梅西在日本登场+港府要求解释)
+1. [中国证监会主要领导调整](https://so.toutiao.com/search?keyword=中国证监会主要领导调整)
+1. [贝克汉姆评论区被刷屏要求退钱道歉](https://so.toutiao.com/search?keyword=贝克汉姆评论区被刷屏要求退钱道歉)
+1. [媒体人：梅西去年北京行成为绝唱](https://so.toutiao.com/search?keyword=媒体人：梅西去年北京行成为绝唱)
+1. [乔治：我们预计不会有任何交易动作](https://so.toutiao.com/search?keyword=乔治：我们预计不会有任何交易动作)
+1. [隐藏式门把手为什么还没被淘汰](https://so.toutiao.com/search?keyword=隐藏式门把手为什么还没被淘汰)
+1. [胡锡进：梅西香港表现暴露私德瑕疵](https://so.toutiao.com/search?keyword=胡锡进：梅西香港表现暴露私德瑕疵)
+1. [华为辟谣：网传“任正非讲话”系伪造](https://so.toutiao.com/search?keyword=华为辟谣：网传“任正非讲话”系伪造)
 1. [女子领日本人参观旅顺日俄监狱大笑](https://so.toutiao.com/search?keyword=女子领日本人参观旅顺日俄监狱大笑)
-1. [上海银行年终奖为零过节费还要倒扣](https://so.toutiao.com/search?keyword=上海银行年终奖为零过节费还要倒扣)
+1. [记者：阿根廷3月中国行大概率取消](https://so.toutiao.com/search?keyword=记者：阿根廷3月中国行大概率取消)
+1. [女儿女婿送惊喜 爸爸强忍泪水](https://so.toutiao.com/search?keyword=女儿女婿送惊喜+爸爸强忍泪水)
+1. [贵州80后女干部被逮捕](https://so.toutiao.com/search?keyword=贵州80后女干部被逮捕)
+1. [霍启刚评梅西日本行：伤口撒盐](https://so.toutiao.com/search?keyword=霍启刚评梅西日本行：伤口撒盐)
+1. [网友谈高速堵车启示](https://so.toutiao.com/search?keyword=网友谈高速堵车启示)
+1. [三大股指齐涨 A股逾200股涨停](https://so.toutiao.com/search?keyword=三大股指齐涨+A股逾200股涨停)
+1. [香港“退钱哥”怒剪梅西球衣脱粉](https://so.toutiao.com/search?keyword=香港“退钱哥”怒剪梅西球衣脱粉)
+1. [美最高法院会终结特朗普大选之路吗](https://so.toutiao.com/search?keyword=美最高法院会终结特朗普大选之路吗)
+1. [杨丽萍河南春晚双舞龙凤呈祥](https://so.toutiao.com/search?keyword=杨丽萍河南春晚双舞龙凤呈祥)
+1. [徐亮：我会对梅西彻彻底底脱粉](https://so.toutiao.com/search?keyword=徐亮：我会对梅西彻彻底底脱粉)
+1. [印尼解释选中国列车：日本临时涨价](https://so.toutiao.com/search?keyword=印尼解释选中国列车：日本临时涨价)
+1. [中证2000指数午后拉升涨超8%](https://so.toutiao.com/search?keyword=中证2000指数午后拉升涨超8%)
+1. [日本球迷评梅西“缺战”香港](https://so.toutiao.com/search?keyword=日本球迷评梅西“缺战”香港)
+1. [萧敬腾不愿妻子受生育之苦](https://so.toutiao.com/search?keyword=萧敬腾不愿妻子受生育之苦)
+1. [春运安检仪里满满都是对家人的惦念](https://so.toutiao.com/search?keyword=春运安检仪里满满都是对家人的惦念)
+1. [霍启刚谈梅西缺阵：绝不能就此作罢](https://so.toutiao.com/search?keyword=霍启刚谈梅西缺阵：绝不能就此作罢)
+1. [赵少康批民进党“只会找人民麻烦”](https://so.toutiao.com/search?keyword=赵少康批民进党“只会找人民麻烦”)
+1. [美名嘴因采访普京或遭欧盟制裁](https://so.toutiao.com/search?keyword=美名嘴因采访普京或遭欧盟制裁)
 1. [梅西3月还来杭州吗](https://so.toutiao.com/search?keyword=梅西3月还来杭州吗)
+1. [特朗普入狱的可能性有多大](https://so.toutiao.com/search?keyword=特朗普入狱的可能性有多大)
+1. [历史数据看证监会换帅后A股走势](https://so.toutiao.com/search?keyword=历史数据看证监会换帅后A股走势)
+1. [博主撕毁梅西签名球衣](https://so.toutiao.com/search?keyword=博主撕毁梅西签名球衣)
+1. [为什么大家不信6.8亿大奖](https://so.toutiao.com/search?keyword=为什么大家不信6.8亿大奖)
+1. [六部电影定档大年初一](https://so.toutiao.com/search?keyword=六部电影定档大年初一)
+1. [梅西日本行退场时送球衣还挥手致意](https://so.toutiao.com/search?keyword=梅西日本行退场时送球衣还挥手致意)
+1. [多家银行即将下调存款利率](https://so.toutiao.com/search?keyword=多家银行即将下调存款利率)
+1. [6小时返乡路走3天3夜](https://so.toutiao.com/search?keyword=6小时返乡路走3天3夜)
+1. [马布里评梅西：拿钱不出场太疯狂](https://so.toutiao.com/search?keyword=马布里评梅西：拿钱不出场太疯狂)
+1. [泰国女学生被球门砸中脖子身亡](https://so.toutiao.com/search?keyword=泰国女学生被球门砸中脖子身亡)
+1. [父亲铲一条路的雪迎接儿子儿媳回家](https://so.toutiao.com/search?keyword=父亲铲一条路的雪迎接儿子儿媳回家)
+1. [梅西日本行上场超30分钟](https://so.toutiao.com/search?keyword=梅西日本行上场超30分钟)
+1. [中国股市动向令全球关注](https://so.toutiao.com/search?keyword=中国股市动向令全球关注)
+1. [退伍军人晒政府发的工具箱慰问品](https://so.toutiao.com/search?keyword=退伍军人晒政府发的工具箱慰问品)
+1. [上海银行年终奖为零过节费还要倒扣](https://so.toutiao.com/search?keyword=上海银行年终奖为零过节费还要倒扣)
 1. [吴清任证监会主席](https://so.toutiao.com/search?keyword=吴清任证监会主席)
 1. [霍启刚：这件事绝对不能就此作罢](https://so.toutiao.com/search?keyword=霍启刚：这件事绝对不能就此作罢)
 1. [尿毒症是吃出来的？谣言](https://so.toutiao.com/search?keyword=尿毒症是吃出来的？谣言)
-1. [胡锡进：梅西香港表现暴露私德瑕疵](https://so.toutiao.com/search?keyword=胡锡进：梅西香港表现暴露私德瑕疵)
-1. [贝克汉姆评论区被刷屏要求退钱道歉](https://so.toutiao.com/search?keyword=贝克汉姆评论区被刷屏要求退钱道歉)
 1. [牛仔裤被年轻人抛弃了吗](https://so.toutiao.com/search?keyword=牛仔裤被年轻人抛弃了吗)
-1. [媒体人：梅西去年北京行成为绝唱](https://so.toutiao.com/search?keyword=媒体人：梅西去年北京行成为绝唱)
-1. [中国证监会主要领导调整](https://so.toutiao.com/search?keyword=中国证监会主要领导调整)
-1. [隐藏式门把手为什么还没被淘汰](https://so.toutiao.com/search?keyword=隐藏式门把手为什么还没被淘汰)
-1. [记者：阿根廷3月中国行大概率取消](https://so.toutiao.com/search?keyword=记者：阿根廷3月中国行大概率取消)
 1. [大学生回家被父母催起床后反向输出](https://so.toutiao.com/search?keyword=大学生回家被父母催起床后反向输出)
-1. [交警中队长查获干部酒驾后安排调包](https://so.toutiao.com/search?keyword=交警中队长查获干部酒驾后安排调包)
-1. [霍启刚评梅西日本行：伤口撒盐](https://so.toutiao.com/search?keyword=霍启刚评梅西日本行：伤口撒盐)
 1. [港星高海宁为理解梅西言论道歉](https://so.toutiao.com/search?keyword=港星高海宁为理解梅西言论道歉)
-1. [华为辟谣：网传“任正非讲话”系伪造](https://so.toutiao.com/search?keyword=华为辟谣：网传“任正非讲话”系伪造)
-1. [徐亮：我会对梅西彻彻底底脱粉](https://so.toutiao.com/search?keyword=徐亮：我会对梅西彻彻底底脱粉)
 1. [山东卫视春晚嗨跳《科目三》](https://so.toutiao.com/search?keyword=山东卫视春晚嗨跳《科目三》)
 1. [女儿女婿为爸爸送惊喜爸爸强忍泪水](https://so.toutiao.com/search?keyword=女儿女婿为爸爸送惊喜爸爸强忍泪水)
-1. [日本球迷评梅西“缺战”香港](https://so.toutiao.com/search?keyword=日本球迷评梅西“缺战”香港)
 1. [中东武装袭击已致146名美国人伤亡](https://so.toutiao.com/search?keyword=中东武装袭击已致146名美国人伤亡)
 1. [女子动车上霸座被行政拘留5日](https://so.toutiao.com/search?keyword=女子动车上霸座被行政拘留5日)
 1. [历数梅西9次中国行](https://so.toutiao.com/search?keyword=历数梅西9次中国行)
-1. [网友谈高速堵车启示](https://so.toutiao.com/search?keyword=网友谈高速堵车启示)
-1. [特朗普入狱的可能性有多大](https://so.toutiao.com/search?keyword=特朗普入狱的可能性有多大)
-1. [梅西在日本登场 港府要求解释](https://so.toutiao.com/search?keyword=梅西在日本登场+港府要求解释)
 1. [梅德韦杰夫：若北约开战会核武回应](https://so.toutiao.com/search?keyword=梅德韦杰夫：若北约开战会核武回应)
 1. [媒体：激活农民增收致富的源头活水](https://so.toutiao.com/search?keyword=媒体：激活农民增收致富的源头活水)
 1. [香港消委会收到梅西事件投诉超千宗](https://so.toutiao.com/search?keyword=香港消委会收到梅西事件投诉超千宗)
 1. [张家胜将任中国足协党委书记](https://so.toutiao.com/search?keyword=张家胜将任中国足协党委书记)
-1. [杨丽萍河南春晚双舞龙凤呈祥](https://so.toutiao.com/search?keyword=杨丽萍河南春晚双舞龙凤呈祥)
-1. [香港“退钱哥”怒剪梅西球衣脱粉](https://so.toutiao.com/search?keyword=香港“退钱哥”怒剪梅西球衣脱粉)
 1. [8车智能化大战谁能通关](https://so.toutiao.com/search?keyword=8车智能化大战谁能通关)
 1. [苹果被曝开发可折叠式iPhone](https://so.toutiao.com/search?keyword=苹果被曝开发可折叠式iPhone)
 1. [中国香港议员要求主办方向球迷退款](https://so.toutiao.com/search?keyword=中国香港议员要求主办方向球迷退款)
 1. [年夜饭必看龙虾硬菜](https://so.toutiao.com/search?keyword=年夜饭必看龙虾硬菜)
 1. [澳将出台法律允许员工下班“断联”](https://so.toutiao.com/search?keyword=澳将出台法律允许员工下班“断联”)
-1. [梅西日本行退场时送球衣还挥手致意](https://so.toutiao.com/search?keyword=梅西日本行退场时送球衣还挥手致意)
-1. [萧敬腾不愿妻子受生育之苦](https://so.toutiao.com/search?keyword=萧敬腾不愿妻子受生育之苦)
 1. [高铁时代为何仍需绿皮车支棱起来](https://so.toutiao.com/search?keyword=高铁时代为何仍需绿皮车支棱起来)
-1. [梅西日本行上场超30分钟](https://so.toutiao.com/search?keyword=梅西日本行上场超30分钟)
 1. [贵州“80后”女干部姜黎黎被逮捕](https://so.toutiao.com/search?keyword=贵州“80后”女干部姜黎黎被逮捕)
 1. [环卫工人讨薪后续：举报电话为空号](https://so.toutiao.com/search?keyword=环卫工人讨薪后续：举报电话为空号)
 1. [日本核污染水泄漏或人为失误造成](https://so.toutiao.com/search?keyword=日本核污染水泄漏或人为失误造成)
@@ -65,16 +88,12 @@
 1. [玩文化还是得看河南卫视](https://so.toutiao.com/search?keyword=玩文化还是得看河南卫视)
 1. [苏群谈梅西风波：恐怖的公关灾难](https://so.toutiao.com/search?keyword=苏群谈梅西风波：恐怖的公关灾难)
 1. [杨丽萍揭秘河南春晚5米高跷幕后](https://so.toutiao.com/search?keyword=杨丽萍揭秘河南春晚5米高跷幕后)
-1. [印尼解释选中国列车：日本临时涨价](https://so.toutiao.com/search?keyword=印尼解释选中国列车：日本临时涨价)
-1. [六部电影定档大年初一](https://so.toutiao.com/search?keyword=六部电影定档大年初一)
 1. [绳上挂晒的豆皮被屋顶雪精准砸落](https://so.toutiao.com/search?keyword=绳上挂晒的豆皮被屋顶雪精准砸落)
 1. [印尼选择中国列车：我们需要不锈钢](https://so.toutiao.com/search?keyword=印尼选择中国列车：我们需要不锈钢)
 1. [花60元买的锅上有捐赠河南灾区字样](https://so.toutiao.com/search?keyword=花60元买的锅上有捐赠河南灾区字样)
 1. [赵大牛歌声表情太像爸爸赵本山](https://so.toutiao.com/search?keyword=赵大牛歌声表情太像爸爸赵本山)
-1. [历史数据看证监会换帅后A股走势](https://so.toutiao.com/search?keyword=历史数据看证监会换帅后A股走势)
 1. [3儿童被困湖中央 消防破冰涉水救回](https://so.toutiao.com/search?keyword=3儿童被困湖中央+消防破冰涉水救回)
 1. [宝宝看爸爸妈妈的眼神“天差地别”](https://so.toutiao.com/search?keyword=宝宝看爸爸妈妈的眼神“天差地别”)
-1. [博主撕毁梅西签名球衣](https://so.toutiao.com/search?keyword=博主撕毁梅西签名球衣)
 1. [回家路有多难：6小时路程走3天3夜](https://so.toutiao.com/search?keyword=回家路有多难：6小时路程走3天3夜)
 1. [日本参议员：台湾问题纯属中国内政](https://so.toutiao.com/search?keyword=日本参议员：台湾问题纯属中国内政)
 1. [网红张美丽涉寻衅滋事罪被捕](https://so.toutiao.com/search?keyword=网红张美丽涉寻衅滋事罪被捕)
@@ -87,8 +106,6 @@
 1. [妈妈蒸馒头出锅时用毛巾快速抽打](https://so.toutiao.com/search?keyword=妈妈蒸馒头出锅时用毛巾快速抽打)
 1. [450元买镶银元算盘被评论区打假](https://so.toutiao.com/search?keyword=450元买镶银元算盘被评论区打假)
 1. [男子以331万一年中标学校超市租赁权](https://so.toutiao.com/search?keyword=男子以331万一年中标学校超市租赁权)
-1. [多家银行即将下调存款利率](https://so.toutiao.com/search?keyword=多家银行即将下调存款利率)
-1. [父亲铲一条路的雪迎接儿子儿媳回家](https://so.toutiao.com/search?keyword=父亲铲一条路的雪迎接儿子儿媳回家)
 1. [日本核污染水泄露 驻日使馆回应](https://so.toutiao.com/search?keyword=日本核污染水泄露+驻日使馆回应)
 1. [中6.8亿彩票当事人现身兑奖](https://so.toutiao.com/search?keyword=中6.8亿彩票当事人现身兑奖)
 1. [教练唆使小球员照着人踢？足协调查](https://so.toutiao.com/search?keyword=教练唆使小球员照着人踢？足协调查)
@@ -104,7 +121,6 @@
 1. [王毅：希望韩对华“积极客观友善”](https://so.toutiao.com/search?keyword=王毅：希望韩对华“积极客观友善”)
 1. [南方降雨减弱气温回升](https://so.toutiao.com/search?keyword=南方降雨减弱气温回升)
 1. [一个县城扎堆20多家零食店](https://so.toutiao.com/search?keyword=一个县城扎堆20多家零食店)
-1. [中国股市动向令全球关注](https://so.toutiao.com/search?keyword=中国股市动向令全球关注)
 1. [双色球亿元奖扎堆周二是巧合吗](https://so.toutiao.com/search?keyword=双色球亿元奖扎堆周二是巧合吗)
 1. [美军称遭袭基地未能发现来袭无人机](https://so.toutiao.com/search?keyword=美军称遭袭基地未能发现来袭无人机)
 1. [《南来北往》爱而不得最心酸](https://so.toutiao.com/search?keyword=《南来北往》爱而不得最心酸)
