--- a/archives/toutiao-search/2024-02-08.md
+++ b/archives/toutiao-search/2024-02-08.md
@@ -1,59 +1,74 @@
 # 2024-02-08
 
-共 256 条
+共 270 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 08 2024 18:00:43 GMT+0800 (China Standard Time) -->
-1. [媒体人：梅西团队未被告知必须上场](https://so.toutiao.com/search?keyword=媒体人：梅西团队未被告知必须上场)
-1. [实拍长沙街头冻雨有多吓人](https://so.toutiao.com/search?keyword=实拍长沙街头冻雨有多吓人)
+<!-- 最后更新时间 Thu Feb 08 2024 19:00:36 GMT+0800 (China Standard Time) -->
+1. [宝马女车主违停致整条街堵塞](https://so.toutiao.com/search?keyword=宝马女车主违停致整条街堵塞)
+1. [前央媒主持人工龄34年退休金3600](https://so.toutiao.com/search?keyword=前央媒主持人工龄34年退休金3600)
 1. [年货市场腾起浓浓“烟火气”](https://so.toutiao.com/search?keyword=年货市场腾起浓浓“烟火气”)
-1. [马布里评梅西：拿钱不出场太疯狂](https://so.toutiao.com/search?keyword=马布里评梅西：拿钱不出场太疯狂)
 1. [朝鲜废除与韩国所有经济领域合作协议](https://so.toutiao.com/search?keyword=朝鲜废除与韩国所有经济领域合作协议)
-1. [中信证券：房价不会继续持续下跌](https://so.toutiao.com/search?keyword=中信证券：房价不会继续持续下跌)
+1. [男孩称在自家宾馆被陌生女骚扰](https://so.toutiao.com/search?keyword=男孩称在自家宾馆被陌生女骚扰)
 1. [媒体人：以后梅西中国行都没有了](https://so.toutiao.com/search?keyword=媒体人：以后梅西中国行都没有了)
+1. [全球各地友人都在过中国年](https://so.toutiao.com/search?keyword=全球各地友人都在过中国年)
 1. [李刚任甘肃省委常委](https://so.toutiao.com/search?keyword=李刚任甘肃省委常委)
 1. [这张“湖北高速路况”图是AI制成的](https://so.toutiao.com/search?keyword=这张“湖北高速路况”图是AI制成的)
-1. [梅西在日本登场 港府要求解释](https://so.toutiao.com/search?keyword=梅西在日本登场+港府要求解释)
+1. [媒体人：梅西团队未被告知必须上场](https://so.toutiao.com/search?keyword=媒体人：梅西团队未被告知必须上场)
 1. [贝克汉姆评论区被刷屏要求退钱道歉](https://so.toutiao.com/search?keyword=贝克汉姆评论区被刷屏要求退钱道歉)
 1. [曝中国足协已暂停与阿根廷足协合作](https://so.toutiao.com/search?keyword=曝中国足协已暂停与阿根廷足协合作)
 1. [媒体人：梅西去年北京行成为绝唱](https://so.toutiao.com/search?keyword=媒体人：梅西去年北京行成为绝唱)
+1. [沪指3连阳迎兔年收官](https://so.toutiao.com/search?keyword=沪指3连阳迎兔年收官)
+1. [用Loong为“龙”正名为哪般](https://so.toutiao.com/search?keyword=用Loong为“龙”正名为哪般)
+1. [霍启刚谈梅西缺阵：绝不能就此作罢](https://so.toutiao.com/search?keyword=霍启刚谈梅西缺阵：绝不能就此作罢)
+1. [希拉里大骂专访普京的美名嘴](https://so.toutiao.com/search?keyword=希拉里大骂专访普京的美名嘴)
+1. [钱塘江大潮小伙拖大鱼拼命逃出潮头](https://so.toutiao.com/search?keyword=钱塘江大潮小伙拖大鱼拼命逃出潮头)
+1. [马布里评梅西：拿钱不出场太疯狂](https://so.toutiao.com/search?keyword=马布里评梅西：拿钱不出场太疯狂)
+1. [孩子写作业被训 太爷将书包埋雪里](https://so.toutiao.com/search?keyword=孩子写作业被训+太爷将书包埋雪里)
+1. [贵州80后女干部被逮捕](https://so.toutiao.com/search?keyword=贵州80后女干部被逮捕)
+1. [霍启刚评梅西日本行：伤口撒盐](https://so.toutiao.com/search?keyword=霍启刚评梅西日本行：伤口撒盐)
+1. [碧桂园1月合同销售金额约54.9亿元](https://so.toutiao.com/search?keyword=碧桂园1月合同销售金额约54.9亿元)
+1. [牛仔裤被年轻人抛弃了吗](https://so.toutiao.com/search?keyword=牛仔裤被年轻人抛弃了吗)
+1. [记者：阿根廷3月中国行大概率取消](https://so.toutiao.com/search?keyword=记者：阿根廷3月中国行大概率取消)
+1. [网友谈高速堵车启示](https://so.toutiao.com/search?keyword=网友谈高速堵车启示)
+1. [隐藏式门把手为什么还没被淘汰](https://so.toutiao.com/search?keyword=隐藏式门把手为什么还没被淘汰)
+1. [梅西日本行退场时送球衣还挥手致意](https://so.toutiao.com/search?keyword=梅西日本行退场时送球衣还挥手致意)
+1. [女儿女婿送惊喜 爸爸强忍泪水](https://so.toutiao.com/search?keyword=女儿女婿送惊喜+爸爸强忍泪水)
+1. [重庆“小火锅”雪乡齐拜年](https://so.toutiao.com/search?keyword=重庆“小火锅”雪乡齐拜年)
+1. [梅西3月还来杭州吗](https://so.toutiao.com/search?keyword=梅西3月还来杭州吗)
+1. [留学生地铁听到中文报站自豪感拉满](https://so.toutiao.com/search?keyword=留学生地铁听到中文报站自豪感拉满)
+1. [C罗率利雅得胜利给中国朋友们拜年](https://so.toutiao.com/search?keyword=C罗率利雅得胜利给中国朋友们拜年)
+1. [梅西在日本登场 港府要求解释](https://so.toutiao.com/search?keyword=梅西在日本登场+港府要求解释)
+1. [侯友宜批民进党当局叫停赴陆团](https://so.toutiao.com/search?keyword=侯友宜批民进党当局叫停赴陆团)
+1. [以军与哈马斯在汗尤尼斯激烈交火](https://so.toutiao.com/search?keyword=以军与哈马斯在汗尤尼斯激烈交火)
+1. [网友涌入梅西社交账号留言表达不满](https://so.toutiao.com/search?keyword=网友涌入梅西社交账号留言表达不满)
+1. [华为辟谣：网传“任正非讲话”系伪造](https://so.toutiao.com/search?keyword=华为辟谣：网传“任正非讲话”系伪造)
+1. [一家人刚扫完院里的雪 下一秒白干](https://so.toutiao.com/search?keyword=一家人刚扫完院里的雪+下一秒白干)
+1. [香港“退钱哥”怒剪梅西球衣脱粉](https://so.toutiao.com/search?keyword=香港“退钱哥”怒剪梅西球衣脱粉)
+1. [总台龙年春晚新歌老歌暖心放送](https://so.toutiao.com/search?keyword=总台龙年春晚新歌老歌暖心放送)
+1. [多家银行即将下调存款利率](https://so.toutiao.com/search?keyword=多家银行即将下调存款利率)
+1. [日本球迷不满梅西嫌票贵](https://so.toutiao.com/search?keyword=日本球迷不满梅西嫌票贵)
+1. [杨丽萍河南春晚双舞龙凤呈祥](https://so.toutiao.com/search?keyword=杨丽萍河南春晚双舞龙凤呈祥)
+1. [为什么大家不信6.8亿大奖](https://so.toutiao.com/search?keyword=为什么大家不信6.8亿大奖)
+1. [香港是否会拒绝梅西入境？官方回应](https://so.toutiao.com/search?keyword=香港是否会拒绝梅西入境？官方回应)
+1. [河南春晚没啥用发布会](https://so.toutiao.com/search?keyword=河南春晚没啥用发布会)
+1. [媒体：美空袭伊叙加剧中东紧张局势](https://so.toutiao.com/search?keyword=媒体：美空袭伊叙加剧中东紧张局势)
+1. [苏群谈梅西风波：恐怖的公关灾难](https://so.toutiao.com/search?keyword=苏群谈梅西风波：恐怖的公关灾难)
+1. [法前总统称加沙死者是战争损耗遭批](https://so.toutiao.com/search?keyword=法前总统称加沙死者是战争损耗遭批)
+1. [实拍长沙街头冻雨有多吓人](https://so.toutiao.com/search?keyword=实拍长沙街头冻雨有多吓人)
+1. [中信证券：房价不会继续持续下跌](https://so.toutiao.com/search?keyword=中信证券：房价不会继续持续下跌)
 1. [中国股市动向令全球关注](https://so.toutiao.com/search?keyword=中国股市动向令全球关注)
-1. [全球各地友人都在过中国年](https://so.toutiao.com/search?keyword=全球各地友人都在过中国年)
 1. [日本球迷评梅西“缺战”香港](https://so.toutiao.com/search?keyword=日本球迷评梅西“缺战”香港)
 1. [女子花129元理发回家崩溃大哭](https://so.toutiao.com/search?keyword=女子花129元理发回家崩溃大哭)
 1. [画了个龙年窗花被妈妈无情擦掉](https://so.toutiao.com/search?keyword=画了个龙年窗花被妈妈无情擦掉)
-1. [霍启刚评梅西日本行：伤口撒盐](https://so.toutiao.com/search?keyword=霍启刚评梅西日本行：伤口撒盐)
 1. [利率调降趋势持续 高息产品获青睐](https://so.toutiao.com/search?keyword=利率调降趋势持续+高息产品获青睐)
-1. [沪指3连阳迎兔年收官](https://so.toutiao.com/search?keyword=沪指3连阳迎兔年收官)
-1. [记者：阿根廷3月中国行大概率取消](https://so.toutiao.com/search?keyword=记者：阿根廷3月中国行大概率取消)
-1. [男孩称在自家宾馆被陌生女骚扰](https://so.toutiao.com/search?keyword=男孩称在自家宾馆被陌生女骚扰)
-1. [贵州80后女干部被逮捕](https://so.toutiao.com/search?keyword=贵州80后女干部被逮捕)
-1. [梅西日本行退场时送球衣还挥手致意](https://so.toutiao.com/search?keyword=梅西日本行退场时送球衣还挥手致意)
 1. [来自岛屿读书的新年祝福](https://so.toutiao.com/search?keyword=来自岛屿读书的新年祝福)
 1. [2024川渝春晚今晚播出](https://so.toutiao.com/search?keyword=2024川渝春晚今晚播出)
-1. [日本球迷不满梅西嫌票贵](https://so.toutiao.com/search?keyword=日本球迷不满梅西嫌票贵)
-1. [C罗率利雅得胜利给中国朋友们拜年](https://so.toutiao.com/search?keyword=C罗率利雅得胜利给中国朋友们拜年)
-1. [用Loong为“龙”正名为哪般](https://so.toutiao.com/search?keyword=用Loong为“龙”正名为哪般)
 1. [徐亮：我会对梅西彻彻底底脱粉](https://so.toutiao.com/search?keyword=徐亮：我会对梅西彻彻底底脱粉)
-1. [为什么大家不信6.8亿大奖](https://so.toutiao.com/search?keyword=为什么大家不信6.8亿大奖)
-1. [华为辟谣：网传“任正非讲话”系伪造](https://so.toutiao.com/search?keyword=华为辟谣：网传“任正非讲话”系伪造)
-1. [霍启刚谈梅西缺阵：绝不能就此作罢](https://so.toutiao.com/search?keyword=霍启刚谈梅西缺阵：绝不能就此作罢)
 1. [乔治：我的腹股沟仍很酸痛](https://so.toutiao.com/search?keyword=乔治：我的腹股沟仍很酸痛)
 1. [女子让农民工挪位被拒后怒骂](https://so.toutiao.com/search?keyword=女子让农民工挪位被拒后怒骂)
-1. [梅西3月还来杭州吗](https://so.toutiao.com/search?keyword=梅西3月还来杭州吗)
-1. [隐藏式门把手为什么还没被淘汰](https://so.toutiao.com/search?keyword=隐藏式门把手为什么还没被淘汰)
-1. [一家人刚扫完院里的雪 下一秒白干](https://so.toutiao.com/search?keyword=一家人刚扫完院里的雪+下一秒白干)
-1. [重庆“小火锅”雪乡齐拜年](https://so.toutiao.com/search?keyword=重庆“小火锅”雪乡齐拜年)
 1. [盘点配享太庙的河南卫视出圈节目](https://so.toutiao.com/search?keyword=盘点配享太庙的河南卫视出圈节目)
 1. [美国蒙面男进苹果商店抢走4排手机](https://so.toutiao.com/search?keyword=美国蒙面男进苹果商店抢走4排手机)
-1. [苏群谈梅西风波：恐怖的公关灾难](https://so.toutiao.com/search?keyword=苏群谈梅西风波：恐怖的公关灾难)
-1. [网友谈高速堵车启示](https://so.toutiao.com/search?keyword=网友谈高速堵车启示)
 1. [机构：商品房市场将聚焦改善性住房](https://so.toutiao.com/search?keyword=机构：商品房市场将聚焦改善性住房)
-1. [香港“退钱哥”怒剪梅西球衣脱粉](https://so.toutiao.com/search?keyword=香港“退钱哥”怒剪梅西球衣脱粉)
-1. [希拉里大骂专访普京的美名嘴](https://so.toutiao.com/search?keyword=希拉里大骂专访普京的美名嘴)
-1. [多家银行即将下调存款利率](https://so.toutiao.com/search?keyword=多家银行即将下调存款利率)
-1. [牛仔裤被年轻人抛弃了吗](https://so.toutiao.com/search?keyword=牛仔裤被年轻人抛弃了吗)
-1. [杨丽萍河南春晚双舞龙凤呈祥](https://so.toutiao.com/search?keyword=杨丽萍河南春晚双舞龙凤呈祥)
 1. [来点儿龙年年味](https://so.toutiao.com/search?keyword=来点儿龙年年味)
 1. [父亲铲一条路的雪迎接儿子儿媳回家](https://so.toutiao.com/search?keyword=父亲铲一条路的雪迎接儿子儿媳回家)
 1. [博主撕毁梅西签名球衣](https://so.toutiao.com/search?keyword=博主撕毁梅西签名球衣)
@@ -66,7 +81,6 @@
 1. [央视总台春晚版权声明](https://so.toutiao.com/search?keyword=央视总台春晚版权声明)
 1. [曝梅西香港行中场休息后脸就黑了](https://so.toutiao.com/search?keyword=曝梅西香港行中场休息后脸就黑了)
 1. [澳将出台法律允许员工下班“断联”](https://so.toutiao.com/search?keyword=澳将出台法律允许员工下班“断联”)
-1. [女儿女婿送惊喜 爸爸强忍泪水](https://so.toutiao.com/search?keyword=女儿女婿送惊喜+爸爸强忍泪水)
 1. [王涛：主办方未与梅西团队联系](https://so.toutiao.com/search?keyword=王涛：主办方未与梅西团队联系)
 1. [俄高官：美执意把北约“拽进亚洲”](https://so.toutiao.com/search?keyword=俄高官：美执意把北约“拽进亚洲”)
 1. [陈艺文昌雅妮世锦赛女双三米板夺冠](https://so.toutiao.com/search?keyword=陈艺文昌雅妮世锦赛女双三米板夺冠)
